--- a/user_information.ui
+++ b/user_information.ui
@@ -150,7 +150,7 @@
      <item row="5" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>密码</string>
+        <string>重置密码</string>
        </property>
       </widget>
      </item>
