--- a/book_information.ui
+++ b/book_information.ui
@@ -210,7 +210,7 @@
       <widget class="QLineEdit" name="search_id_edit"/>
      </item>
      <item row="4" column="1">
-      <widget class="QLineEdit" name="IBSN_edit"/>
+      <widget class="QLineEdit" name="ISBN_edit"/>
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="label_9">
@@ -289,7 +289,7 @@
     </column>
     <column>
      <property name="text">
-      <string>IBSN</string>
+      <string>ISBN</string>
      </property>
     </column>
     <column>
