--- a/login.ui
+++ b/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>892</width>
-    <height>628</height>
+    <width>996</width>
+    <height>659</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,25 +17,12 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="exit_but">
-    <property name="geometry">
-     <rect>
-      <x>573</x>
-      <y>449</y>
-      <width>71</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>退出</string>
-    </property>
-   </widget>
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>233</x>
-      <y>122</y>
-      <width>451</width>
+      <x>220</x>
+      <y>160</y>
+      <width>531</width>
       <height>381</height>
      </rect>
     </property>
@@ -48,44 +35,41 @@
     <property name="frameShadow">
      <enum>QFrame::Sunken</enum>
     </property>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>70</y>
+       <width>401</width>
+       <height>251</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 75 9pt &quot;微软雅黑&quot;;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </widget>
-   <widget class="QLineEdit" name="id_edit">
+   <widget class="QPushButton" name="exit_but">
     <property name="geometry">
      <rect>
-      <x>389</x>
-      <y>289</y>
-      <width>151</width>
-      <height>20</height>
+      <x>574</x>
+      <y>420</y>
+      <width>71</width>
+      <height>21</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
-    </property>
     <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="log_but">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>392</y>
-      <width>81</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 75 9pt &quot;微软雅黑&quot;;</string>
-    </property>
-    <property name="text">
-     <string>登录</string>
+     <string>退出</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="key_edit">
     <property name="geometry">
      <rect>
-      <x>389</x>
-      <y>330</y>
+      <x>420</x>
+      <y>338</y>
       <width>151</width>
       <height>20</height>
      </rect>
@@ -97,11 +81,82 @@
      <enum>QLineEdit::Password</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>384</x>
+      <y>312</y>
+      <width>31</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string>帐号</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>384</x>
+      <y>340</y>
+      <width>31</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 9pt &quot;微软雅黑&quot;;
+background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt; 密码 &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="log_but">
+    <property name="geometry">
+     <rect>
+      <x>384</x>
+      <y>370</y>
+      <width>81</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 9pt &quot;微软雅黑&quot;;</string>
+    </property>
+    <property name="text">
+     <string>登录</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="id_edit">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>310</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <widget class="QPushButton" name="reg_but">
     <property name="geometry">
      <rect>
-      <x>453</x>
-      <y>392</y>
+      <x>484</x>
+      <y>370</y>
       <width>81</width>
       <height>25</height>
      </rect>
@@ -114,74 +169,6 @@ image: url(:/new/prefix1/picture/注册.png);</string>
      <string>注册</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>351</x>
-      <y>289</y>
-      <width>32</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 75 9pt &quot;微软雅黑&quot;;</string>
-    </property>
-    <property name="text">
-     <string> 帐号 </string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="auto_login_check">
-    <property name="geometry">
-     <rect>
-      <x>473</x>
-      <y>370</y>
-      <width>71</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>自动登录</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>351</x>
-      <y>330</y>
-      <width>32</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 75 9pt &quot;微软雅黑&quot;;</string>
-    </property>
-    <property name="text">
-     <string> 密码 </string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="keep_password_check">
-    <property name="geometry">
-     <rect>
-      <x>350</x>
-      <y>370</y>
-      <width>71</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>记住密码</string>
-    </property>
-   </widget>
-   <zorder>frame</zorder>
-   <zorder>exit_but</zorder>
-   <zorder>id_edit</zorder>
-   <zorder>log_but</zorder>
-   <zorder>key_edit</zorder>
-   <zorder>reg_but</zorder>
-   <zorder>label</zorder>
-   <zorder>auto_login_check</zorder>
-   <zorder>label_2</zorder>
-   <zorder>keep_password_check</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
