--- a/event_information.ui
+++ b/event_information.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>993</width>
-    <height>646</height>
+    <width>1189</width>
+    <height>755</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,24 +17,63 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>770</x>
-      <y>60</y>
+      <x>790</x>
+      <y>160</y>
       <width>191</width>
       <height>501</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
+     <item row="11" column="0">
+      <widget class="QPushButton" name="log_but">
+       <property name="text">
+        <string>日志</string>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="1">
+      <widget class="QPushButton" name="modify_but">
+       <property name="text">
+        <string>修改个人信息</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" colspan="2">
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="1">
+        <widget class="QRadioButton" name="user_name_but">
+         <property name="text">
+          <string>用户名</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QRadioButton" name="book_name_but">
+         <property name="text">
+          <string>书名</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QRadioButton" name="book_id_but">
+         <property name="text">
+          <string>书号</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QRadioButton" name="user_id_but">
+         <property name="text">
+          <string>帐号</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
      <item row="12" column="1">
       <widget class="QPushButton" name="book_info_but">
        <property name="text">
         <string>书籍管理</string>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="0">
-      <widget class="QPushButton" name="user_info_but">
-       <property name="text">
-        <string>用户管理</string>
        </property>
       </widget>
      </item>
@@ -92,6 +131,23 @@
        </item>
       </layout>
      </item>
+     <item row="12" column="0">
+      <widget class="QPushButton" name="user_info_but">
+       <property name="text">
+        <string>用户管理</string>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="1">
+      <widget class="QPushButton" name="exit_but">
+       <property name="text">
+        <string>退出</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0" colspan="2">
+      <layout class="QHBoxLayout" name="horizontalLayout"/>
+     </item>
      <item row="3" column="0" colspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
@@ -119,84 +175,17 @@
        </item>
       </layout>
      </item>
-     <item row="7" column="0" colspan="2">
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QLabel" name="label_5">
-         <property name="text">
-          <string>编号</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLineEdit" name="id_edit"/>
-       </item>
-      </layout>
-     </item>
-     <item row="15" column="1">
-      <widget class="QPushButton" name="exit_but">
-       <property name="text">
-        <string>退出</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="2">
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="1">
-        <widget class="QRadioButton" name="user_name_but">
-         <property name="text">
-          <string>用户名</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QRadioButton" name="book_name_but">
-         <property name="text">
-          <string>书名</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QRadioButton" name="book_id_but">
-         <property name="text">
-          <string>书号</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QRadioButton" name="user_id_but">
-         <property name="text">
-          <string>帐号</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="6" column="0" colspan="2">
-      <widget class="QPushButton" name="insert_but">
-       <property name="text">
-        <string>借阅</string>
-       </property>
-      </widget>
-     </item>
-     <item row="11" column="0">
-      <widget class="QPushButton" name="log_but">
-       <property name="text">
-        <string>日志</string>
-       </property>
-      </widget>
-     </item>
-     <item row="11" column="1">
-      <widget class="QPushButton" name="modify_but">
-       <property name="text">
-        <string>修改个人信息</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="0" colspan="2">
+     <item row="5" column="1">
       <widget class="QPushButton" name="return_but">
        <property name="text">
         <string>归还</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QPushButton" name="insert_but">
+       <property name="text">
+        <string>借阅</string>
        </property>
       </widget>
      </item>
@@ -205,9 +194,9 @@
    <widget class="QTableWidget" name="event_table">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>60</y>
-      <width>741</width>
+      <x>160</x>
+      <y>160</y>
+      <width>621</width>
       <height>501</height>
      </rect>
     </property>
@@ -217,16 +206,6 @@
     <property name="lineWidth">
      <number>1</number>
     </property>
-    <column>
-     <property name="text">
-      <string>编号</string>
-     </property>
-     <property name="font">
-      <font>
-       <family>微软雅黑</family>
-      </font>
-     </property>
-    </column>
     <column>
      <property name="text">
       <string>帐号</string>
@@ -278,6 +257,59 @@
      </property>
     </column>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>80</y>
+      <width>891</width>
+      <height>611</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/new/prefix1/picture/框Big.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>90</y>
+      <width>161</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 28pt &quot;微软雅黑&quot;;</string>
+    </property>
+    <property name="text">
+     <string>借阅管理</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>-180</x>
+      <y>460</y>
+      <width>601</width>
+      <height>371</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/new/prefix1/picture/22332.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>label</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>event_table</zorder>
+   <zorder>label_12</zorder>
+   <zorder>label_2</zorder>
   </widget>
  </widget>
  <resources/>
