--- a/login.ui
+++ b/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>996</width>
-    <height>659</height>
+    <width>1109</width>
+    <height>628</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,59 +17,11 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QFrame" name="frame">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
-      <y>160</y>
-      <width>531</width>
-      <height>381</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-image: url(:/new/prefix1/picture/登录.png);</string>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::NoFrame</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Sunken</enum>
-    </property>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>70</y>
-       <width>401</width>
-       <height>251</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">font: 75 9pt &quot;微软雅黑&quot;;</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </widget>
-   <widget class="QPushButton" name="exit_but">
-    <property name="geometry">
-     <rect>
-      <x>574</x>
-      <y>420</y>
-      <width>71</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>退出</string>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="key_edit">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>338</y>
+      <x>260</x>
+      <y>478</y>
       <width>151</width>
       <height>20</height>
      </rect>
@@ -84,10 +36,10 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>384</x>
-      <y>312</y>
+      <x>224</x>
+      <y>448</y>
       <width>31</width>
-      <height>16</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -100,13 +52,26 @@
      <string>帐号</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="exit_but">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>550</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>退出</string>
+    </property>
+   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>384</x>
-      <y>340</y>
+      <x>224</x>
+      <y>476</y>
       <width>31</width>
-      <height>16</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -123,8 +88,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="log_but">
     <property name="geometry">
      <rect>
-      <x>384</x>
-      <y>370</y>
+      <x>224</x>
+      <y>510</y>
       <width>81</width>
       <height>25</height>
      </rect>
@@ -139,8 +104,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QLineEdit" name="id_edit">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>310</y>
+      <x>260</x>
+      <y>450</y>
       <width>151</width>
       <height>21</height>
      </rect>
@@ -155,8 +120,8 @@ background-color: rgb(255, 255, 255);</string>
    <widget class="QPushButton" name="reg_but">
     <property name="geometry">
      <rect>
-      <x>484</x>
-      <y>370</y>
+      <x>324</x>
+      <y>510</y>
       <width>81</width>
       <height>25</height>
      </rect>
@@ -169,6 +134,47 @@ image: url(:/new/prefix1/picture/注册.png);</string>
      <string>注册</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>50</y>
+      <width>881</width>
+      <height>551</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 9pt &quot;微软雅黑&quot;;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>360</y>
+      <width>191</width>
+      <height>251</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/new/prefix1/picture/QQ截图20151108145840.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>label_</zorder>
+   <zorder>key_edit</zorder>
+   <zorder>label_3</zorder>
+   <zorder>exit_but</zorder>
+   <zorder>label_2</zorder>
+   <zorder>log_but</zorder>
+   <zorder>id_edit</zorder>
+   <zorder>reg_but</zorder>
+   <zorder>label_4</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
