--- a/modify.ui
+++ b/modify.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>897</width>
-    <height>677</height>
+    <width>953</width>
+    <height>696</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,14 +19,14 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>80</y>
-     <width>367</width>
-     <height>461</height>
+     <x>270</x>
+     <y>-40</y>
+     <width>361</width>
+     <height>731</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-image: url(:/new/prefix1/picture/修改用户信息.png);</string>
+    <string notr="true">border-image: url(:/new/prefix1/picture/框2.png);</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
@@ -34,26 +34,19 @@
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QFrame" name="frame_3">
-    <property name="geometry">
-     <rect>
-      <x>-40</x>
-      <y>-50</y>
-      <width>431</width>
-      <height>571</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
-    </property>
-    <zorder>frame_2</zorder>
-   </widget>
+  </widget>
+  <widget class="QPushButton" name="exit_but">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>510</y>
+     <width>81</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>关闭</string>
+   </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="enabled">
@@ -275,90 +268,36 @@ border-color: rgb(255, 255, 255);</string>
     <enum>QLineEdit::Normal</enum>
    </property>
   </widget>
-  <widget class="QFrame" name="frame_4">
+  <widget class="QLabel" name="label_12">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>500</y>
-     <width>120</width>
-     <height>121</height>
+     <x>350</x>
+     <y>80</y>
+     <width>201</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">border-image: url(:/new/prefix1/resource/22.png);</string>
+    <string notr="true">font: 75 23pt &quot;微软雅黑&quot;;</string>
    </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
-  </widget>
-  <widget class="QFrame" name="frame_2">
-   <property name="geometry">
-    <rect>
-     <x>230</x>
-     <y>50</y>
-     <width>431</width>
-     <height>521</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border-image: url(:/new/prefix1/resource/surrounding.png);</string>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
-  </widget>
-  <widget class="QFrame" name="frame_5">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>490</y>
-     <width>111</width>
-     <height>131</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border-image: url(:/new/prefix1/resource/33.png);</string>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
+   <property name="text">
+    <string>修改个人信息</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>620</x>
-     <y>100</y>
-     <width>211</width>
-     <height>41</height>
+     <x>10</x>
+     <y>350</y>
+     <width>561</width>
+     <height>361</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 9pt &quot;微软雅黑&quot;;</string>
+    <string notr="true">border-image: url(:/new/prefix1/picture/22333.png);</string>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:18pt;&quot;&gt;修改个人信息&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="exit_but">
-   <property name="geometry">
-    <rect>
-     <x>520</x>
-     <y>500</y>
-     <width>81</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>关闭</string>
+    <string/>
    </property>
   </widget>
   <zorder>frame</zorder>
@@ -366,22 +305,20 @@ border-color: rgb(255, 255, 255);</string>
   <zorder>label_5</zorder>
   <zorder>label_4</zorder>
   <zorder>label_3</zorder>
+  <zorder>confirm_edit</zorder>
+  <zorder>original_key_edit</zorder>
   <zorder>label_2</zorder>
   <zorder>label_6</zorder>
-  <zorder>label_7</zorder>
-  <zorder>frame_5</zorder>
-  <zorder>label_8</zorder>
-  <zorder>frame_2</zorder>
-  <zorder>frame_4</zorder>
-  <zorder>admin_edit</zorder>
-  <zorder>confirm_edit</zorder>
-  <zorder>email_edit</zorder>
-  <zorder>exit_but</zorder>
-  <zorder>key_edit</zorder>
   <zorder>name_edit</zorder>
-  <zorder>original_key_edit</zorder>
-  <zorder>phone_edit</zorder>
+  <zorder>label_7</zorder>
+  <zorder>key_edit</zorder>
+  <zorder>label_12</zorder>
+  <zorder>label_8</zorder>
+  <zorder>exit_but</zorder>
+  <zorder>email_edit</zorder>
+  <zorder>admin_edit</zorder>
   <zorder>submit_but</zorder>
+  <zorder>phone_edit</zorder>
  </widget>
  <resources/>
  <connections/>
