--- a/event_information.ui
+++ b/event_information.ui
@@ -189,6 +189,13 @@
        </property>
       </widget>
      </item>
+     <item row="15" column="0">
+      <widget class="QPushButton" name="logout_but">
+       <property name="text">
+        <string>注销</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
    <widget class="QTableWidget" name="event_table">
