--- a/user_information.ui
+++ b/user_information.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="13" column="0" colspan="2">
+     <item row="15" column="0" colspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
         <spacer name="horizontalSpacer_2">
@@ -48,7 +48,7 @@
        </item>
       </layout>
      </item>
-     <item row="10" column="0" colspan="2">
+     <item row="12" column="0" colspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QPushButton" name="modify_but">
@@ -73,10 +73,10 @@
        </item>
       </layout>
      </item>
-     <item row="8" column="1">
+     <item row="10" column="1">
       <widget class="QLineEdit" name="phone_edit"/>
      </item>
-     <item row="4" column="0">
+     <item row="6" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>帐号</string>
@@ -91,33 +91,33 @@
        <item>
         <widget class="QPushButton" name="search_but">
          <property name="text">
-          <string>用户名搜索</string>
+          <string>搜索</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
-     <item row="5" column="0">
+     <item row="7" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>密码</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="0" colspan="2">
+     <item row="14" column="0" colspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout_4"/>
      </item>
-     <item row="7" column="0">
+     <item row="9" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
         <string>邮箱</string>
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="11" column="1">
       <widget class="QLineEdit" name="level_edit"/>
      </item>
-     <item row="3" column="1">
+     <item row="5" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_6">
        <item>
         <spacer name="horizontalSpacer">
@@ -141,23 +141,27 @@
        </item>
       </layout>
      </item>
-     <item row="5" column="1">
-      <widget class="QLineEdit" name="key_edit"/>
+     <item row="7" column="1">
+      <widget class="QLineEdit" name="key_edit">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
+       </property>
+      </widget>
      </item>
-     <item row="4" column="1">
+     <item row="6" column="1">
       <widget class="QLineEdit" name="id_edit"/>
      </item>
-     <item row="8" column="0">
+     <item row="10" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
         <string>手机</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="8" column="1">
       <widget class="QLineEdit" name="name_edit"/>
      </item>
-     <item row="11" column="0">
+     <item row="13" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -170,14 +174,14 @@
        </property>
       </spacer>
      </item>
-     <item row="9" column="0">
+     <item row="11" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>等级</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="2">
+     <item row="3" column="0" colspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QLabel" name="label_4">
@@ -191,15 +195,29 @@
        </item>
       </layout>
      </item>
-     <item row="6" column="0">
+     <item row="8" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>用户名</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="9" column="1">
       <widget class="QLineEdit" name="email_edit"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QRadioButton" name="user_id_but">
+       <property name="text">
+        <string>帐号</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QRadioButton" name="user_name_but">
+       <property name="text">
+        <string>用户名</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
